# RedBrick

./: README.md
RedBrick/: CMakeLists.txt  postinst.in  prerm.in
RedBrick/mhdiscovery/: CMakeLists.txt  MH_Discovery.cpp  MH_DiscoveryClient.cpp  MH_DiscoveryParser.cpp  MH_DiscoveryParser.h  MH_DiscoveryServer.cpp  MH_DiscoveryThread.cpp  stdafx.h
RedBrick/mhdiscovery/mhdiscovery/: MH_Discovery.h  MH_DiscoveryClient.h  MH_DiscoveryServer.h  MH_DiscoveryThread.h
RedBrick/mhengine/: CMakeLists.txt  MH_CriticalSection.cpp  MH_Engine.cpp  MH_Event.cpp  MH_MessageQueue.cpp  MH_MessageQueueManager.cpp  MH_MessageTask.cpp  MH_NetInterface.cpp  MH_ServerSocket.cpp  MH_ServerSocketTask.cpp  MH_Socket.cpp  MH_SocketTask.cpp  MH_Thread.cpp  MH_UdpSocket.cpp  MH_UnixServerSocket.cpp  MH_UnixSocket.cpp
RedBrick/mhengine/mhengine/: MH_CriticalSection.h  MH_DebugLog.h  MH_Engine.h  MH_Event.h  MH_MessageQueue.h  MH_MessageQueueManager.h  MH_MessageTask.h  MH_NetInterface.h  MH_ServerSocket.h  MH_ServerSocketTask.h  MH_Socket.h  MH_SocketTask.h  MH_Thread.h  MH_UdpSocket.h  MH_UnixServerSocket.h  MH_UnixSocket.h
RedBrick/mhmedia/: CMakeLists.txt  MH_CameraDevice.cpp  MH_CaptureDevice.cpp  MH_FileSink.cpp  MH_JpegWriter.cpp  MH_Media.cpp  MH_MediaPacket.cpp  MH_MediaPacketFramedSource.cpp  MH_MediaPacketFramedSource.h  MH_MediaPacketPool.cpp  MH_MediaPacketPoolInterface.cpp  MH_MediaPacketSink.cpp  MH_MediaPacketSrc.cpp  MH_MediaPacketStream.cpp  MH_MediaRecoder.cpp  MH_RtspServerThread.cpp  MH_VideoServerMediaSubsession.cpp  MH_VideoServerMediaSubsession.h
RedBrick/mhmedia/mhmedia/: MH_CameraDevice.h  MH_CaptureDevice.h  MH_FileSink.h  MH_JpegWriter.h  MH_Media.h  MH_MediaPacket.h  MH_MediaPacketPool.h  MH_MediaPacketPoolInterface.h  MH_MediaPacketSink.h  MH_MediaPacketSrc.h  MH_MediaPacketStream.h  MH_MediaRecoder.h  MH_RtspServerThread.h  ffmpeg_inc.h
RedBrick/mhonvif/: CMakeLists.txt  DeviceBinding.AddIPAddressFilter.req.xml  DeviceBinding.AddIPAddressFilter.res.xml  DeviceBinding.AddScopes.req.xml  DeviceBinding.AddScopes.res.xml  DeviceBinding.CreateCertificate.req.xml  DeviceBinding.CreateCertificate.res.xml  DeviceBinding.CreateDot1XConfiguration.req.xml  DeviceBinding.CreateDot1XConfiguration.res.xml  DeviceBinding.CreateStorageConfiguration.req.xml  DeviceBinding.CreateStorageConfiguration.res.xml  DeviceBinding.CreateUsers.req.xml  DeviceBinding.CreateUsers.res.xml  DeviceBinding.DeleteCertificates.req.xml  DeviceBinding.DeleteCertificates.res.xml  DeviceBinding.DeleteDot1XConfiguration.req.xml  DeviceBinding.DeleteDot1XConfiguration.res.xml  DeviceBinding.DeleteGeoLocation.req.xml  DeviceBinding.DeleteGeoLocation.res.xml  DeviceBinding.DeleteStorageConfiguration.req.xml  DeviceBinding.DeleteStorageConfiguration.res.xml  DeviceBinding.DeleteUsers.req.xml  DeviceBinding.DeleteUsers.res.xml  DeviceBinding.GetAccessPolicy.req.xml  DeviceBinding.GetAccessPolicy.res.xml  DeviceBinding.GetCACertificates.req.xml  DeviceBinding.GetCACertificates.res.xml  DeviceBinding.GetCapabilities.req.xml  DeviceBinding.GetCapabilities.res.xml  DeviceBinding.GetCertificateInformation.req.xml  DeviceBinding.GetCertificateInformation.res.xml  DeviceBinding.GetCertificates.req.xml  DeviceBinding.GetCertificates.res.xml  DeviceBinding.GetCertificatesStatus.req.xml  DeviceBinding.GetCertificatesStatus.res.xml  DeviceBinding.GetClientCertificateMode.req.xml  DeviceBinding.GetClientCertificateMode.res.xml  DeviceBinding.GetDNS.req.xml  DeviceBinding.GetDNS.res.xml  DeviceBinding.GetDPAddresses.req.xml  (+456 more)
RedBrick/mhonvif/mhonvif/: SZ17.h  SZ_NetworkSetting.h  SZ_OnvifInfo.h  SZ_OnvifPlatform.h  SZ_OnvifProcess.h  SZ_ProfileSetting.h  SZ_PtzDevice.h  SZ_UserSetting.h
RedBrick/mhwebserver/: CMakeLists.txt  MH_WebServer.cpp
RedBrick/mhwebserver/mhwebserver/: MH_WebServer.h
RedBrick/raspicamera/: CMakeLists.txt  RaspiCamControl.c  RaspiCameraDevice.cpp  RaspiCaptureDevice.cpp
RedBrick/raspicamera/raspicamera/: RaspiCameraDevice.h  RaspiCaptureDevice.h
RedBrick/redbrick/: CMakeLists.txt  RaspiOnvifPlatform.cpp  RaspiOnvifPlatform.h  RaspiPtzDevice.cpp  RaspiPtzDevice.h  SZ_NetworkSettingImpl.cpp  SZ_NetworkSettingImpl.h  SZ_ProfileSettingImpl.cpp  SZ_ProfileSettingImpl.h  SZ_UserSettingImpl.cpp  SZ_UserSettingImpl.h  daemonize.cpp  daemonize.h  main.cpp
RedBrick/redbrick/scripts/: redbrick
RedBrick/redbrick/settings/: device_info.json  onvif_setting.json  profile.json  user_info.json  video_encoder_config.json
